--- a/test.html
+++ b/test.html
@@ -34,16 +34,24 @@
         <div>
             <h1>Javascript Challenges</h1>
             <select id="challengeSelector" onchange="selectionChanged()">
-                <option value="sumPos">Sum Positive</option>
-                <option value="palendrome">Palendrome</option>
-                <option value="unique">Unique</option>
-                </select>
-            <p id="desc"></p
-            >
+                <option value="sumPos">
+                    Sum Positive
+                </option>
+                <option value="palendrome">
+                    Palendrome
+                </option>
+                <option value="unique">
+                    Unique
+                </option>
+            </select>
+            <p id="desc"></p>
             <form id="mainForm">
-                <p>Input:
-                <input type="text" id="txtInput">
-                <button type="submit" class="btn">Submit</button>
+                <p>
+                    Input:
+                    <input type="text" id="txtInput">
+                    <button type="submit">
+                        Submit
+                    </button>
                 </p>
                 Output:
                 <ul id="outputList">
